--- a/Django Templates/django_projects/variables_in_templates/templates/variables_in_templates/variables.html
+++ b/Django Templates/django_projects/variables_in_templates/templates/variables_in_templates/variables.html
@@ -6,8 +6,8 @@
 <body>
     <h1>VARIABLES.HTML</h1>
     This is example how to use Django Template Language to fill in dynamic shit on the web page:
-    <p> First Name = {{first_name}} </p>
-    <p> Last Name = {{last_name}} </p>
+    <p> First Name = {{first_name | lower }} </p>
+    <p> Last Name = {{last_name | upper}} </p>
     <p> A list = {{my_list}}</p>
     <p> An element of the list = {{my_list.1}}</p>
     <p> A dictionary = {{my_dictionary}}</p>
