understand template tags: url

--- a/Django Templates/django_projects/variables_in_templates/templates/variables_in_templates/example.html
+++ b/Django Templates/django_projects/variables_in_templates/templates/variables_in_templates/example.html
@@ -5,5 +5,8 @@
 </head>
 <body>
    <h1>Django kicks ass</h1> 
+   <p>
+        <a href = "{% url 'variables_in_templates:variable'%}"> Click here for hyperlink to other page </a>
+   </p>
 </body>
 </html>
