--- a/Django Admin/car_website/cars/templates/cars/list.html
+++ b/Django Admin/car_website/cars/templates/cars/list.html
@@ -1,5 +1,14 @@
 {% extends 'base.html'%}
 
-{% block content  %}
-    <h1>List.html</h1>
+{% block content%}
+    <div class= "container">
+        <h1>List.html</h1>
+
+        <ul>
+            {% for car in all_cars_key %}
+                <li>{{car}}</li>
+            {% endfor %}
+        </ul>
+
+    </div>
 {% endblock  %}
