--- a/Django Forms/car_rental_website/rentals/templates/rentals/rental_review.html
+++ b/Django Forms/car_rental_website/rentals/templates/rentals/rental_review.html
@@ -1,14 +1,28 @@
+{% load static%}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="{% static 'rentals/custom.css' %}">
+
+    <title>Learn Template Rendering for Django Forms</title>
 </head>
 <body>
-    <h1>Form Review Form</h1>
-    <form method = 'POST'>
-         {% csrf_token %}
-         {{ form }}
-         <input type = 'submit' value = 'Submit'>
-    </form>
+    <div class="container">
+        <h1>Form Review Form</h1>
+        <form method = 'POST'>
+            {% csrf_token %}
+             {% for field in form  %}
+                <div class="mb-3">
+                    {{field.label_tag}}
+                </div>
+                {{field}}
+            {% endfor %}
+            <input type = 'submit' value = 'Submit'>
+        </form>
+    </div>
 </body>
 </html>
