--- a/Django Forms/car_rental_website/rentals/templates/rentals/rental_review.html
+++ b/Django Forms/car_rental_website/rentals/templates/rentals/rental_review.html
@@ -20,6 +20,7 @@
                     {{field.label_tag}}
                 </div>
                 {{field}}
+                {{field.errors}}
             {% endfor %}
             <input type = 'submit' value = 'Submit'>
         </form>
