understand list views with Class Based Views

--- a/Django Class Based Views/school/classroom/templates/classroom/home.html
+++ b/Django Class Based Views/school/classroom/templates/classroom/home.html
@@ -9,6 +9,8 @@
     <ul>
         <li><a href="{% url 'classroom:thank_you'%}">Welcome to thank you page</li>
         <li><a href="{% url 'classroom:contact'%}">Welcome to contact page</li>
+        <li><a href="{% url 'classroom:create_teacher'%}">Create new teacher</li>
+        <li><a href="{% url 'classroom:list'%}">List teachers</li>
     </ul>
 </body>
 </html>
