--- a/Django Class Based Views/school/classroom/templates/classroom/teacher_list.html
+++ b/Django Class Based Views/school/classroom/templates/classroom/teacher_list.html
@@ -7,7 +7,7 @@
     <h1>List of all teachers</h1>
     <ul>
         {% for teacher in object_list  %}  <!-- or 'teacher_list' instead 'object_list'(standard variable name) after it has been defined as context_object_name = 'teacher_list' in the class based view-->
-            <li>{{teacher.first_name}} {{teacher.last_name}} teaches {{teacher.subject}}</li>
+            <li><a href="/classroom/teacher_detail/{{teacher.id}}">{{teacher.first_name}} {{teacher.last_name}} </li>    
         {% endfor %}
     </ul>
 </body>
